feat: add personal booklists
